bugfix on add task reset form

--- a/assets/templates/add-task-template.html
+++ b/assets/templates/add-task-template.html
@@ -253,7 +253,7 @@
             <span class="reminder-text">This field is required</span>
           </div>
           <div class="clear-create-button-container">
-            <button class="clear-button" onclick="resetForm()">
+            <button class="clear-button" type="button" onclick="location.reload()">
               Clear <img src="../assets/img/iconoir_cancel.svg" alt="" />
             </button>
             <button
