summary update responsiv

--- a/assets/templates/header-template.html
+++ b/assets/templates/header-template.html
@@ -9,6 +9,7 @@
          <div id="userInitial" class="user-initial"><button class="user-circle" id="userCircle" onclick="buttonUser()"></button></div>
          <div class="user-menu" id="userMenu">
             <ul>
+                <li class="user-menu-help"><a href="/html/help.html">Help</a></li>
                 <li class="user-menu-container"><a href="/html/legal-notice.html">Legal Notice</a></li>
                 <li class="user-menu-container"><a href="/html/privacy-policy.html">Privacy Policy</a></li>
                 <li class="user-menu-container" onclick="logOut()">Log out</li>
