bugfix on prio task

--- a/assets/templates/add-contact.html
+++ b/assets/templates/add-contact.html
@@ -1,4 +1,4 @@
-<div id="addContact" class="overlay">
+<div id="addContact" class="overlay" onclick="stopEventBubbling(event)">
   <div class="contact-dialog">
     <button class="close-button" onclick="closeAddContact()">
       <img src="../assets/img/close-button.svg" alt="" />
