--- a/assets/templates/add-task-template.html
+++ b/assets/templates/add-task-template.html
@@ -94,12 +94,12 @@
               <div class="prio">Prio</div>
               <div id="prio-buttons" class="prio-buttons">
                 <button
-                  onclick="changeColors('.urgent-color', 'high')"
+                  onclick="changeColors('.urgent-color', 'urgent')"
                   class="prio-button urgent-button"
                   type="button"
-                  name="high"
-                  id="high"
-                  value="high"
+                  name="urgent"
+                  id="urgent"
+                  value="urgent"
                   data-prio="urgent"
                 >
                   Urgent<svg
