--- a/styles/contact.css
+++ b/styles/contact.css
@@ -46,7 +46,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 32px 24px;
+    padding: 0 24px 32px 24px;
   }
   
   .letter{
