--- a/style.css
+++ b/style.css
@@ -219,6 +219,9 @@ button:hover {
   background-color: white;
   cursor: pointer;
   text-transform: uppercase;
+  font-size: 20px;
+  font-weight: 700;
+  color: #29ABE2;
 }
 
 
