--- a/assets/templates/header-template.html
+++ b/assets/templates/header-template.html
@@ -1,19 +1,41 @@
 <div class="header-content">
-    <div class="header-logo">
-        <img src="../assets/img/logo-mobile.svg" alt="">
+  <script>
+    import { logout } from "../js/firebase.js";
+    document.addEventListener("DOMContentLoaded", () => {
+      console.log("logout loaded");
+      const logoutButton = document.querySelector("#logoutButton");
+      logoutButton.addEventListener("click", () => {
+        logout();
+      });
+    });
+  </script>
+  <div class="header-logo">
+    <img src="../assets/img/logo-mobile.svg" alt="" />
+  </div>
+  <div class="header-header">Kanban Project Management Tool</div>
+  <div id="headerButtons" class="header-buttons" id="headerContainer">
+    <!-- Hier kommt der Hilfe-Button und der User-Button rein -->
+    <a href="help.html"
+      ><img class="help-icon" src="../assets/img/help.svg" alt=""
+    /></a>
+    <div id="userInitial" class="user-initial">
+      <button
+        class="user-circle"
+        id="userCircle"
+        onclick="buttonUser()"
+      ></button>
     </div>
-    <div class="header-header">Kanban Project Management Tool</div>
-    <div id="headerButtons" class="header-buttons" id="headerContainer">
-        <!-- Hier kommt der Hilfe-Button und der User-Button rein -->
-         <a href="help.html"><img class="help-icon" src="../assets/img/help.svg" alt=""></a>
-         <div id="userInitial" class="user-initial"><button class="user-circle" id="userCircle" onclick="buttonUser()"></button></div>
-         <div class="user-menu" id="userMenu">
-            <ul>
-                <li class="user-menu-help"><a href="/html/help.html">Help</a></li>
-                <li class="user-menu-container"><a href="/html/legal-notice.html">Legal Notice</a></li>
-                <li class="user-menu-container"><a href="/html/privacy-policy.html">Privacy Policy</a></li>
-                <li class="user-menu-container" onclick="logOut()">Log out</li>
-            </ul>
-         </div>
+    <div class="user-menu" id="userMenu">
+      <ul>
+        <li class="user-menu-help"><a href="/html/help.html">Help</a></li>
+        <li class="user-menu-container">
+          <a href="/html/legal-notice.html">Legal Notice</a>
+        </li>
+        <li class="user-menu-container">
+          <a href="/html/privacy-policy.html">Privacy Policy</a>
+        </li>
+        <li class="user-menu-container" id="logoutButton">Log out</li>
+      </ul>
     </div>
+  </div>
 </div>
