--- a/styles/media.css
+++ b/styles/media.css
@@ -1,7 +1,23 @@
-@media(max-width: 1000px){
+@media(max-width: 800px){
     .container{
         flex-direction: column-reverse;
-        height: auto !important;
+        height: initial
+    }
+
+    
+
+    .user-circle{
+        height: 40px;
+        width: 40px;
+    }
+
+    .main-content{
+        height: calc(100vh - 80px);
+        flex: initial;
+    }
+
+    body{
+        height: 100vh;
     }
 
     .menu-content{
@@ -15,6 +31,7 @@
         flex-direction: row !important;
         gap: 0 !important;
         justify-content: space-around;
+        height: 80px;
     }
 
     .menu-buttons a{
@@ -31,11 +48,13 @@
 
     .header-logo{
         display: block !important;
+        height: 40px;
     }
 
     .header-content{
         margin: 0 !important;
         padding: 20px 16px;
+        height: auto;
     }
 
     #menu-logo{
@@ -63,6 +82,10 @@
         right: 0;
     }
 
+    .padding-add-task{
+        padding: 80px 0 0 0;
+    }
+
 }
 
 @media(max-width: 1350px){
@@ -86,7 +109,54 @@
         gap: 15px;
     }
 
+    .add-task-form-container{
+        align-items: center;
+        width: initial;
+    }
+
+    .form-add-task{
+        align-items: center;
+    }
+    
+
     .container{
         /* max-width: 850px; */
+    }
+}
+
+@media(max-width: 1000px){
+    .reminder{
+        display: none;
+}
+
+}
+
+@media(max-width: 500px){
+    input{
+        width: 396px !important;
+    }
+
+    textarea{
+        width: 396px !important;
+    }
+
+    .add-task-form{
+        width: 396px !important;
+    }
+
+    .first-form {
+        width: 396px;
+    }
+
+    .first-form > div {
+        width: 100%;
+    }
+
+    .second-form{
+        width: 396px;
+    }
+
+    .second-form > div{
+        width: 100%;
     }
 }
