--- a/styles/media.css
+++ b/styles/media.css
@@ -4,8 +4,6 @@
         height: initial
     }
 
-    
-
     .user-circle{
         height: 40px;
         width: 40px;
@@ -124,10 +122,65 @@
     }
 }
 
+@media(max-width: 1250px){
+    .contacts-header-wrap{
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 16px;
+        position: relative;
+    }
+
+    .contacts-seperation-border{
+        transform: rotate(-90deg);
+        translate: 45px 0;
+        height: 90px;
+        order: 3;
+        position: relative;
+        top: -42px;
+    }
+
+    .contacts-header{
+        order: 1;
+    }
+
+    .contacts-motto{
+        order: 2;
+    }
+
+    .user-info-name-container{
+        flex-direction: column;
+        gap: 8px;
+    }
+
+    .contacts-info{
+        margin: 0;
+        padding: 0 0 0 16px;
+    }
+}
+
 @media(max-width: 1000px){
     .reminder{
         display: none;
-}
+    }
+
+    .arrow-left-contacts{
+        display: block;
+    }
+
+    .contacts-info{
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        z-index: 21;
+        background-color: white;
+    }
+
+    .contact-main{
+        justify-content: center;
+        position: relative;
+    }
 
 }
 
@@ -158,5 +211,13 @@
 
     .second-form > div{
         width: 100%;
+    }
+
+    .arrow-left-contacts{
+        right: 0;
+    }
+
+    .contact-list{
+        width: auto;
     }
 }
