--- a/assets/templates/header-template.html
+++ b/assets/templates/header-template.html
@@ -34,7 +34,7 @@
         <li class="user-menu-container">
           <a href="/html/privacy-policy.html">Privacy Policy</a>
         </li>
-        <li class="user-menu-container" id="logoutButton">Log out</li>
+        <li class="user-menu-container" id="logoutButton" onclick="logOut()">Log out</li>
       </ul>
     </div>
   </div>
