--- a/styles/dialog.css
+++ b/styles/dialog.css
@@ -273,10 +273,12 @@
 
 .input-form {
   width: 100%;
-  padding: 12px 40px 12px 16px;
+  padding: 13px 21px;
   border: 1px solid #ddd;
   border-radius: 8px;
-  font-size: 16px;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 24px ;
 }
 
 .input-icon {
