--- a/styles/media.css
+++ b/styles/media.css
@@ -84,6 +84,76 @@
         padding: 80px 0 0 0;
     }
 
+    .add-contact-button > div:first-child{
+        display: none;
+    }
+
+    .add-contact-button{
+        border: 1px solid #2A3647;
+        border-radius: 46px;
+        margin: 0;
+        position: absolute;
+        height: auto;
+        width:  auto;
+        padding: 12px;
+        bottom: 8px;
+        right: 16px;
+    }
+
+    .add-contact-button > div{
+        width: 32px;
+        height: 32px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .contact-list{
+        position: relative;
+    }
+
+    .overlay{
+        top: calc(0% + 80px);
+        height: calc(100vh - 160px);
+        
+    }
+
+    .contact-dialog{
+        height: 100% !important;
+        width: 95%;
+    }
+
+    .contact-img-profil{
+        position: absolute;
+        top: calc(50% - 160px) !important;
+        left: calc(50% - 60px) !important;
+        z-index: 1;
+    }
+
+    .contact-form{
+        gap: 15px;
+    }
+
+    .input-group{
+        height: 41px;
+    }
+
+    .contact-side{
+        height: 300px;
+    }
+
+    .btn-cancel{
+        display: none;
+    }
+
+    .alphabet-list-container{
+        margin-top: 32px;
+    }
+
+    .main{
+        height: initial;
+    }
+
 }
 
 @media(max-width: 1350px){
@@ -158,6 +228,33 @@
     }
 }
 
+@media(max-width: 1050px){
+    .contact-dialog{
+        display: flex;
+        flex-direction: column;
+        height: 90%;
+    }
+
+    .contact-side{
+        width: 100%;
+    }
+
+    .close-button > img{
+        filter: invert(1);
+    }
+
+    .contact-img-profil{
+        position: absolute;
+        top: calc(50% - 150px);
+        left: calc(50% - 60px);
+        z-index: 1;
+    }
+
+    .contact-content{
+        margin: 90px auto;
+    }
+}
+
 @media(max-width: 1000px){
     .reminder{
         display: none;
@@ -175,6 +272,7 @@
         left: 0;
         z-index: 21;
         background-color: white;
+        transform: translateX(100%);
     }
 
     .contact-main{
@@ -219,5 +317,9 @@
 
     .contact-list{
         width: auto;
+    }
+
+    .contact-side{
+        width: 100%;
     }
 }
