--- a/styles/media.css
+++ b/styles/media.css
@@ -125,13 +125,9 @@
 
     .contact-img-profil{
         position: absolute;
-        top: calc(50% - 160px) !important;
+        top: 50% !important;
         left: calc(50% - 60px) !important;
         z-index: 1;
-    }
-
-    .contact-form{
-        gap: 15px;
     }
 
     .input-group{
@@ -233,10 +229,13 @@
         display: flex;
         flex-direction: column;
         height: 90%;
+        overflow-y: auto;
     }
 
     .contact-side{
         width: 100%;
+        height: 351px;
+        padding: 66px 24px;
     }
 
     .close-button > img{
@@ -245,13 +244,22 @@
 
     .contact-img-profil{
         position: absolute;
-        top: calc(50% - 150px);
+        top: 45%;
         left: calc(50% - 60px);
         z-index: 1;
     }
 
     .contact-content{
-        margin: 90px auto;
+        margin: 0 auto;
+        margin-top: 90px;
+    }
+
+    .contact-form{
+        gap: 15px;
+    }
+
+    .btn-create{
+        margin-bottom: 45px;
     }
 }
 
@@ -321,5 +329,9 @@
 
     .contact-side{
         width: 100%;
+    }
+
+    .legals-padding{
+        padding: 48px 16px;
     }
 }
