--- a/assets/templates/header-template.html
+++ b/assets/templates/header-template.html
@@ -1,14 +1,4 @@
 <div class="header-content">
-  <script>
-    import { logout } from "../js/firebase.js";
-    document.addEventListener("DOMContentLoaded", () => {
-      console.log("logout loaded");
-      const logoutButton = document.querySelector("#logoutButton");
-      logoutButton.addEventListener("click", () => {
-        logout();
-      });
-    });
-  </script>
   <div class="header-logo">
     <img src="../assets/img/logo-mobile.svg" alt="" />
   </div>
@@ -34,7 +24,7 @@
         <li class="user-menu-container">
           <a href="/html/privacy-policy.html">Privacy Policy</a>
         </li>
-        <li class="user-menu-container" id="logoutButton" onclick="logOut()">Log out</li>
+        <li class="user-menu-container" id="logoutButton">Log out</li>
       </ul>
     </div>
   </div>
