--- a/styles/media.css
+++ b/styles/media.css
@@ -211,6 +211,26 @@
         max-height: 95%;
     }
 
+    .user-info-inits{
+        width: 80px;
+        height: 80px;
+        font-size: 27px;
+    }
+
+    .contacts-header{
+        order: 1;
+        font-size: 47px;
+    }
+
+    .contacts-motto{
+        order: 2;
+        font-size: 20px;
+    }
+
+    .user-info-name{
+        font-size: 36px;
+    }
+
 }
 
 @media(max-width: 1350px){
@@ -291,18 +311,14 @@
         order: 3;
     }
 
-    .contacts-header{
-        order: 1;
-    }
-
-    .contacts-motto{
-        order: 2;
-    }
+  
 
     .user-info-name-container{
         flex-direction: column;
         gap: 8px;
     }
+
+   
 
     .contacts-info{
         margin: 0;
@@ -388,6 +404,10 @@
         position: relative;
     }
 
+    .user-info-name-container{
+        flex-direction: row;
+    }
+
 }
 
 @media(max-width: 500px){
@@ -469,5 +489,22 @@
 
     .add-contact-button{
         right: 24px;
+    }
+
+    .menu-contacts{
+        display: flex;
+    }
+
+    .user-info-edit-delete{
+        flex-direction: column;
+        position: absolute;
+        padding: 10px;
+        border-radius: 20px 20px 0 20px;
+        background-color: white;
+        box-shadow: 0px 4px 4px 0px #00000040;
+        bottom: 16px;
+        right: 0;
+        z-index: 2;
+        transform: translateX(100%);
     }
 }
