--- a/styles/media.css
+++ b/styles/media.css
@@ -162,10 +162,6 @@
         margin-top: 32px;
     }
 
-    .main{
-        height: initial;
-    }
-
     .board-task-dialog-body > h1{
         font-size: 36px;
     }
@@ -199,8 +195,35 @@
         margin-bottom: 32px;
     }
 
-    .greet{
-        display: none;
+    .greet {
+        left: 0;
+        background-color: #F6F7F8;
+        width: 100%;
+        height: 85vh;
+        position: fixed;
+        top: 82px;
+        z-index: 1000; 
+        opacity: 1;
+        animation: easeOut 2s ease-out 2s forwards;
+        pointer-events: none;
+        text-align: center;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    @keyframes easeOut {
+        0% {
+            opacity: 1;
+        }
+       
+        100% {
+            opacity: 0;
+        }
+    }
+
+    #greetingMessage {
+        text-align: center;
     }
 
     .main-summary{
