--- a/styles/media.css
+++ b/styles/media.css
@@ -210,6 +210,7 @@
         display: flex;
         align-items: center;
         justify-content: center;
+        flex-direction: column;
     }
 
     @keyframes easeOut {
