--- a/assets/templates/menu-template.html
+++ b/assets/templates/menu-template.html
@@ -3,7 +3,7 @@
 </div>
 <div id="menuButtons" class="menu-buttons">
   <a id="summary" href="summary.html" class="menu-hover"><img src="../assets/img/summary-icon.svg" alt="" />Summary</a>
-  <a id="addTask" href="add-task.html" class="menu-hover"><img src="../assets/img/addTask-icon.svg" alt="" />Add Task</a>
+  <a id="addTask" href="add-task.html" class="menu-hover"><img src="../assets/img/addTask-icon.svg" alt="" /><span>Add Task</span></a>
   <a id="board" href="board.html" class="menu-hover"><img src="../assets/img/board-icon.svg" alt="" />Board</a>
   <a id="contacts" href="contacts.html" class="menu-hover"><img src="../assets/img/contacts-icon.svg" alt="" />Contacts</a>
 </div>
