--- a/styles/media.css
+++ b/styles/media.css
@@ -199,12 +199,12 @@
         left: 0;
         background-color: #F6F7F8;
         width: 100%;
-        height: 85vh;
+        height: 78%;
         position: fixed;
+        opacity: 1;
         top: 82px;
         z-index: 1000; 
-        opacity: 1;
-        animation: easeOut 2s ease-out 2s forwards;
+        animation: easeOut 2s ease 2s forwards;
         pointer-events: none;
         text-align: center;
         display: flex;
@@ -216,10 +216,12 @@
     @keyframes easeOut {
         0% {
             opacity: 1;
+            visibility: visible;
         }
        
         100% {
             opacity: 0;
+            visibility: visible;
         }
     }
 
