--- a/assets/templates/add-task-template.html
+++ b/assets/templates/add-task-template.html
@@ -1,4 +1,4 @@
-<body onload="initAddTaskTemplate()">
+<body>
   <div class="padding-add-task" style="position: relative; overflow: hidden">
     <div class="add-task-form-container">
       <div class="add-task-header-wrap add-task-tittle">
