--- a/styles/media.css
+++ b/styles/media.css
@@ -7,6 +7,8 @@
   .user-circle {
     height: 40px;
     width: 40px;
+    font-size: 16px;
+    overflow-wrap: initial;
   }
 
   .main-content {
@@ -347,10 +349,6 @@
 
   .contact-form {
     height: auto;
-  }
-
-  .main{
-    height: initial;
   }
 }
 
